--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-plugins</artifactId>
-        <version>3.18.1-01</version>
+        <version>3.19.1-01</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.axa.ch.health.nexus.casc</groupId>
     <artifactId>nexus-casc-plugin</artifactId>
-    <version>3.18.1-01</version>
+    <version>3.19.1-01</version>
     <packaging>bundle</packaging>
 
     <properties>
@@ -96,10 +96,10 @@
             <id>rso-public-grid</id>
             <url>https://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
             <releases>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
@@ -110,10 +110,10 @@
             <id>rso-public-grid</id>
             <url>https://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
             <releases>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
